@@ -1,6 +1,6 @@
 DIST xfce4-session-4.4.3.tar.bz2 1276089 RMD160 e0aa16b9089ae00a34f5e1df5b1b9af7a104f922 SHA1 609cf888548e1dc7f2b2318698ab86ac73fb0f4d SHA256 fa23d0e079ea3bf1b7f0e056adc6e28df04581632207face4f851269d92bffdd
 DIST xfce4-session-4.6.1.tar.bz2 1365247 RMD160 0cab4a0ca2b0d7718cde546d98bac1c87a7ba4f0 SHA1 760e05bf73783521b3ce34e91aa187c74018ab8c SHA256 feed3f9053b83233697223a20f95ca0ad6efe9fedffcc098e4935a425e8f9f0e
 EBUILD xfce4-session-4.4.3.ebuild 1016 RMD160 fd3574b8a5b1ec670f2c5457a3350eb9aa6b3017 SHA1 27e4b1c821ffe2a80b3c6a13e60b5375f117eb16 SHA256 b4f25e6ca42dc7043eab91d47a1a7185d8bf392fc20278dd82f4561b9303348c
-EBUILD xfce4-session-4.6.1.ebuild 938 RMD160 393a792266228163cb44711962f3307c4b273f57 SHA1 42aa12c692794f9144f91fa4d8ba5d483483eb7a SHA256 bbc01a698438afde5dac5bcb824bf2b3d45ecbee58da2da9f5ba9dfff4fc4eb0
-MISC ChangeLog 10693 RMD160 092fb01f3c796101e936bfcd9a7f75eed0eae766 SHA1 c80fdcf6feccc5bfb26f6f804eeca7b4daaae318 SHA256 859b6f77ad37b87f7c026c34c8e76ebad953f6f5a842f203982ab945d19bc881
+EBUILD xfce4-session-4.6.1.ebuild 955 RMD160 66f5385586b18c03d3ecda5eb7dce81011ac11d9 SHA1 450481d2b860cfc40a8bc199309241a90f51c344 SHA256 275115ad753ee65e3a7b42cd175e0273d5638ec903746756d1d47acc19983508
+MISC ChangeLog 10829 RMD160 7e93ab4f5101db0dba2e52624d22e726bd1cd0b6 SHA1 74eeafae58553d1cc3dabeb92aed7c01261d3c59 SHA256 2c8b358ffec849353c2e3c3617c153e77aea4bd16fc650321258e81ab41b17d1
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
