@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/xfce4-session-4.6.1.ebuild,v 1.1 2009/04/21 04:26:16 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/xfce4-session-4.6.1.ebuild,v 1.2 2009/04/28 01:14:04 darkside Exp $
 
 inherit xfce4
 
@@ -28,6 +28,8 @@ RDEPEND="gnome-base/libglade
 DEPEND="${RDEPEND}
 	dev-util/intltool"
 
-XFCE_CONFIG+=" $(use_enable gnome)"
-
 DOCS="AUTHORS BUGS ChangeLog NEWS README TODO"
+
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable gnome)"
+}
