@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-session
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.84 2009/04/21 04:26:16 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.85 2009/04/28 01:14:04 darkside Exp $
+
+  28 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
+  xfce4-session-4.6.1.ebuild:
+  Move use_enable out of global scope into pkg_setup()
 
 *xfce4-session-4.6.1 (21 Apr 2009)
 
